<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.game.hometeam.HomeTeamFragment">


    <TextView
            android:text="@string/home_team"
            style="@style/title_game_wizard"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/what_is_the_home_team"
            style="@style/subtitle_game_wizard"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="@+id/textView"/>
    <EditText
            style="@style/input_wizard"
            android:id="@+id/inputHomeTeam"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="32dp"
            android:hint="@string/ex_corinthians" android:inputType=""/>
    <Button
            android:text="@string/next"
            style="@style/custom_button"
            android:id="@+id/btNext" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/inputHomeTeam"/>
</androidx.constraintlayout.widget.ConstraintLayout>