<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.game.event.EventFragment">

    <TextView
            android:text="@string/lets_start"
            style="@style/title_game_wizard"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/what_is_the_event_name"
            style="@style/subtitle_game_wizard"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="@+id/textView2"/>
    <EditText
            style="@style/input_wizard"
            android:id="@+id/inputEvent"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:hint="@string/ex_world_cup" android:inputType=""/>
    <Button
            android:text="@string/next"
            style="@style/custom_button"
            android:id="@+id/btNext" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/inputEvent"/>
</androidx.constraintlayout.widget.ConstraintLayout>